--- a/module3solution/style.css
+++ b/module3solution/style.css
@@ -10,9 +10,7 @@ body{
 }
 .navbar{
 	border-radius: 0px;
-}
-.sticky-top{
-	position: sticky;
+	position: fixed;
 }
 .navbar-dark .navbar-brand{
 	color: #fff;
@@ -30,6 +28,18 @@ body{
     background-color: transparent;
     border: 1px solid transparent;
     border-radius: .25rem;
+}
+.nav-item{
+	padding: 0;
+	margin: 0;
+	width: 100%;
+	background-color: white;
+	border-bottom: 1px solid black;
+	color: black;
+	display: block;
+}
+.nav-link{
+	margin: 0px;
 }
 button {
     text-transform: none;
